# QtChess

./: CMakeLists.txt  README.md  main.cpp
data/: qml.qrc
data/qml/: main.qml
src/QtChess/: ChessBoard.cpp  ChessBoard.h  StockfishEngine.cpp  StockfishEngine.h
